--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5081 2004/03/03 23:17:36 minskim Exp $
+$NetBSD: CHANGES,v 1.5082 2004/03/04 02:58:23 simonb Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1146,3 +1146,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated bvi to 1.3.2 [ben 2004-03-03]
 	Updated xchm to 0.9 [minskim 2004-03-03]
 	Updated sylpheed-gtk2 to 0.9.9 [minskim 2004-03-03]
+	Updated priv to 1.0-beta2 [simonb 2004-03-04]
